{
  "version": 4,
  "terraform_version": "1.0.8",
  "serial": 24,
  "lineage": "82fcf200-520f-4dac-110e-98f11828e550",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "JenkinsDockerTF",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vpc-obligatorio-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:473718918692:internet-gateway/igw-06e217ac44eab91e4",
            "id": "igw-06e217ac44eab91e4",
            "owner_id": "473718918692",
            "vpc_id": "vpc-07ec07de48f984184"
          },
          "dependencies": [
            "aws_vpc.vpc-obligatorio"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "vpc-obligatorio-public-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-06e217ac44eab91e4",
            "id": "r-rtb-089f5c1dc5ffd1d611080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-089f5c1dc5ffd1d61",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.vpc-obligatorio-igw",
            "aws_route_table.vpc-obligatorio-public-route-table",
            "aws_vpc.vpc-obligatorio"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc-obligatorio-public-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:473718918692:route-table/rtb-089f5c1dc5ffd1d61",
            "id": "rtb-089f5c1dc5ffd1d61",
            "owner_id": "473718918692",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07ec07de48f984184"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-obligatorio"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpc-obligatorio-frontend-route-table-associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "S0-Sub_dev-a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02299a125b9b3e022",
            "route_table_id": "rtb-089f5c1dc5ffd1d61",
            "subnet_id": "subnet-047211cc4283f5459"
          },
          "dependencies": [
            "aws_route_table.vpc-obligatorio-public-route-table",
            "aws_subnet.vpc-subnets-obl",
            "aws_vpc.vpc-obligatorio"
          ]
        },
        {
          "index_key": "S1-Sub_dev-b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-049824cc8fe385e7b",
            "route_table_id": "rtb-089f5c1dc5ffd1d61",
            "subnet_id": "subnet-002e263f43ae2dd59"
          },
          "dependencies": [
            "aws_route_table.vpc-obligatorio-public-route-table",
            "aws_subnet.vpc-subnets-obl",
            "aws_vpc.vpc-obligatorio"
          ]
        },
        {
          "index_key": "S2-Sub_test-a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c09bf2b75890489e",
            "route_table_id": "rtb-089f5c1dc5ffd1d61",
            "subnet_id": "subnet-070c5f7d2b80411c0"
          },
          "dependencies": [
            "aws_route_table.vpc-obligatorio-public-route-table",
            "aws_subnet.vpc-subnets-obl",
            "aws_vpc.vpc-obligatorio"
          ]
        },
        {
          "index_key": "S3-Sub_test-b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04b67915ab8cf9891",
            "route_table_id": "rtb-089f5c1dc5ffd1d61",
            "subnet_id": "subnet-05a90858355486eba"
          },
          "dependencies": [
            "aws_route_table.vpc-obligatorio-public-route-table",
            "aws_subnet.vpc-subnets-obl",
            "aws_vpc.vpc-obligatorio"
          ]
        },
        {
          "index_key": "S4-Sub_prod_a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ebbbe0c0ebf623de",
            "route_table_id": "rtb-089f5c1dc5ffd1d61",
            "subnet_id": "subnet-00275b39ee7ac75f6"
          },
          "dependencies": [
            "aws_route_table.vpc-obligatorio-public-route-table",
            "aws_subnet.vpc-subnets-obl",
            "aws_vpc.vpc-obligatorio"
          ]
        },
        {
          "index_key": "S5-Sub_prod_b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cdcd68b7bde7449d",
            "route_table_id": "rtb-089f5c1dc5ffd1d61",
            "subnet_id": "subnet-004a86c4f176ac20d"
          },
          "dependencies": [
            "aws_route_table.vpc-obligatorio-public-route-table",
            "aws_subnet.vpc-subnets-obl",
            "aws_vpc.vpc-obligatorio"
          ]
        },
        {
          "index_key": "S6-Sub_prod_c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c301a9b2f3a4494f",
            "route_table_id": "rtb-089f5c1dc5ffd1d61",
            "subnet_id": "subnet-008e041850f2daed5"
          },
          "dependencies": [
            "aws_route_table.vpc-obligatorio-public-route-table",
            "aws_subnet.vpc-subnets-obl",
            "aws_vpc.vpc-obligatorio"
          ]
        },
        {
          "index_key": "S7-Sub_prod_d",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0413379534cb2c812",
            "route_table_id": "rtb-089f5c1dc5ffd1d61",
            "subnet_id": "subnet-07a1744ed9efbe5f4"
          },
          "dependencies": [
            "aws_route_table.vpc-obligatorio-public-route-table",
            "aws_subnet.vpc-subnets-obl",
            "aws_vpc.vpc-obligatorio"
          ]
        },
        {
          "index_key": "S8-Sub_infra",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-046e0cca5096f3649",
            "route_table_id": "rtb-089f5c1dc5ffd1d61",
            "subnet_id": "subnet-03bc415f5bd0c0b10"
          },
          "dependencies": [
            "aws_route_table.vpc-obligatorio-public-route-table",
            "aws_subnet.vpc-subnets-obl",
            "aws_vpc.vpc-obligatorio"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-obl-eks-dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:473718918692:security-group/sg-0f8bda8e84c578ab8",
            "description": "EKS Security Group developer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all IP and Ports Outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f8bda8e84c578ab8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow Port 443",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow Port 80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.200.0/24",
                  "10.0.10.0/24",
                  "10.0.11.0/24"
                ],
                "description": "Allow Port from Infra Subnet",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "eks-sg-dev",
            "name_prefix": "",
            "owner_id": "473718918692",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-sg-dev"
            },
            "tags_all": {
              "Name": "eks-sg-dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-07ec07de48f984184"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-obligatorio"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-obl-eks-prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:473718918692:security-group/sg-01fbaa71af71d9e84",
            "description": "EKS Security Group Production",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all IP and Ports Outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01fbaa71af71d9e84",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow Port 443",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow Port 80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.200.0/24",
                  "10.0.100.0/24",
                  "10.0.101.0/24",
                  "10.0.102.0/24",
                  "10.0.103.0/24"
                ],
                "description": "Allow Port from Infra Subnet",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "eks-sg-prod",
            "name_prefix": "",
            "owner_id": "473718918692",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-sg-prod"
            },
            "tags_all": {
              "Name": "eks-sg-prod"
            },
            "timeouts": null,
            "vpc_id": "vpc-07ec07de48f984184"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-obligatorio"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-obl-eks-test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:473718918692:security-group/sg-0f65e5207a6a63121",
            "description": "EKS Security Group testing",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all IP and Ports Outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f65e5207a6a63121",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow Port 443",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow Port 80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.200.0/24",
                  "10.0.20.0/24",
                  "10.0.21.0/24"
                ],
                "description": "Allow Port from Infra Subnet",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "eks-sg-test",
            "name_prefix": "",
            "owner_id": "473718918692",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-sg-test"
            },
            "tags_all": {
              "Name": "eks-sg-test"
            },
            "timeouts": null,
            "vpc_id": "vpc-07ec07de48f984184"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-obligatorio"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-obl-infra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:473718918692:security-group/sg-0f1382b4cf99759f9",
            "description": "Infra Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all IP and Ports Outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f1382b4cf99759f9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow Port 22",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow Port 8080",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "infra-sg",
            "name_prefix": "",
            "owner_id": "473718918692",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "infra-sg"
            },
            "tags_all": {
              "Name": "infra-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07ec07de48f984184"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-obligatorio"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc-subnets-obl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "S0-Sub_dev-a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:473718918692:subnet/subnet-047211cc4283f5459",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.10.0/24",
            "id": "subnet-047211cc4283f5459",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "473718918692",
            "tags": {
              "Name": "Subnet Dev a",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "Subnet Dev a",
              "terraform": "true"
            },
            "vpc_id": "vpc-07ec07de48f984184"
          },
          "dependencies": [
            "aws_vpc.vpc-obligatorio"
          ]
        },
        {
          "index_key": "S1-Sub_dev-b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:473718918692:subnet/subnet-002e263f43ae2dd59",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.11.0/24",
            "id": "subnet-002e263f43ae2dd59",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "473718918692",
            "tags": {
              "Name": "Subnet Dev b",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "Subnet Dev b",
              "terraform": "true"
            },
            "vpc_id": "vpc-07ec07de48f984184"
          },
          "dependencies": [
            "aws_vpc.vpc-obligatorio"
          ]
        },
        {
          "index_key": "S2-Sub_test-a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:473718918692:subnet/subnet-070c5f7d2b80411c0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.20.0/24",
            "id": "subnet-070c5f7d2b80411c0",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "473718918692",
            "tags": {
              "Name": "Subnet test a",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "Subnet test a",
              "terraform": "true"
            },
            "vpc_id": "vpc-07ec07de48f984184"
          },
          "dependencies": [
            "aws_vpc.vpc-obligatorio"
          ]
        },
        {
          "index_key": "S3-Sub_test-b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:473718918692:subnet/subnet-05a90858355486eba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.21.0/24",
            "id": "subnet-05a90858355486eba",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "473718918692",
            "tags": {
              "Name": "Subnet test b",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "Subnet test b",
              "terraform": "true"
            },
            "vpc_id": "vpc-07ec07de48f984184"
          },
          "dependencies": [
            "aws_vpc.vpc-obligatorio"
          ]
        },
        {
          "index_key": "S4-Sub_prod_a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:473718918692:subnet/subnet-00275b39ee7ac75f6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.100.0/24",
            "id": "subnet-00275b39ee7ac75f6",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "473718918692",
            "tags": {
              "Name": "Subnet prod a",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "Subnet prod a",
              "terraform": "true"
            },
            "vpc_id": "vpc-07ec07de48f984184"
          },
          "dependencies": [
            "aws_vpc.vpc-obligatorio"
          ]
        },
        {
          "index_key": "S5-Sub_prod_b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:473718918692:subnet/subnet-004a86c4f176ac20d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.101.0/24",
            "id": "subnet-004a86c4f176ac20d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "473718918692",
            "tags": {
              "Name": "Subnet prod b",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "Subnet prod b",
              "terraform": "true"
            },
            "vpc_id": "vpc-07ec07de48f984184"
          },
          "dependencies": [
            "aws_vpc.vpc-obligatorio"
          ]
        },
        {
          "index_key": "S6-Sub_prod_c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:473718918692:subnet/subnet-008e041850f2daed5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.102.0/24",
            "id": "subnet-008e041850f2daed5",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "473718918692",
            "tags": {
              "Name": "Subnet prod c",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "Subnet prod c",
              "terraform": "true"
            },
            "vpc_id": "vpc-07ec07de48f984184"
          },
          "dependencies": [
            "aws_vpc.vpc-obligatorio"
          ]
        },
        {
          "index_key": "S7-Sub_prod_d",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:473718918692:subnet/subnet-07a1744ed9efbe5f4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.103.0/24",
            "id": "subnet-07a1744ed9efbe5f4",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "473718918692",
            "tags": {
              "Name": "Subnet prod c",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "Subnet prod c",
              "terraform": "true"
            },
            "vpc_id": "vpc-07ec07de48f984184"
          },
          "dependencies": [
            "aws_vpc.vpc-obligatorio"
          ]
        },
        {
          "index_key": "S8-Sub_infra",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:473718918692:subnet/subnet-03bc415f5bd0c0b10",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.200.0/24",
            "id": "subnet-03bc415f5bd0c0b10",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "473718918692",
            "tags": {
              "Name": "Subnet Infra",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "Subnet Infra",
              "terraform": "true"
            },
            "vpc_id": "vpc-07ec07de48f984184"
          },
          "dependencies": [
            "aws_vpc.vpc-obligatorio"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-obligatorio",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:473718918692:vpc/vpc-07ec07de48f984184",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01157190b0a081dc9",
            "default_route_table_id": "rtb-0db03d83fc066bc3b",
            "default_security_group_id": "sg-0bb435b28ed6b1827",
            "dhcp_options_id": "dopt-00fb33eb677428ed3",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-07ec07de48f984184",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0db03d83fc066bc3b",
            "owner_id": "473718918692",
            "tags": {
              "Name": "vpc-obligatorio"
            },
            "tags_all": {
              "Name": "vpc-obligatorio"
            }
          }
        }
      ]
    }
  ]
}